# DeChat

./: .gitmodules  CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  README.md  environment.yaml
aligner-correct/: Assembly.h  CMakeLists.txt  CommandLines.cpp  CommandLines.h  Correct.h  Hash_Table.cpp  Hash_Table.h  Levenshtein_distance.h  Overlap.cpp  Overlaps.h  POA.cpp  POA.h  Process_Read.cpp  Process_Read.h  anchor.cpp  correct.cpp  correct_round1.h  hist.cpp  htab.cpp  htab.h  kthread.cpp  lordec.h  main.cpp
gatb-core/gatb-core/: CMakeLists.txt
gatb-core/gatb-core/src/gatb/debruijn/impl/: UnitigsConstructionAlgorithm.cpp
include/: Aligner.h  vg.pb.h
src/: CommandLines.cpp  CommandLines1.h  dechat_1.cpp  dechat_1.hpp  main.cpp  utils.cpp  utils.hpp
